[tool.poetry]
name = "explore"
version = "0.1.0"
description = ""
authors = ["Jeremy Dormitzer <jeremydormitzer@hummingbird.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.40.6"
chromadb = "^0.5.5"
gnureadline = "^8.2.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
